k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orcacompute
  labels:
    ax/managed: "true"
    environment: production
