k8s/platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orcacompute
  namespace: orcacompute
  labels:
    app: orcacompute
spec:
  selector:
    app: orcacompute
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
